tests/ui/issues/issue-52126-assign-op-invariance.stderr
error[E0597]: `line` does not live long enough
  --> $DIR/issue-52126-assign-op-invariance.rs:34:28
   |
LL |     for line in vec!["123456789".to_string(), "12345678".to_string()] {
   |         ---- binding `line` declared here
LL |         let v: Vec<&str> = line.split_whitespace().collect();
   |                            ^^^^ borrowed value does not live long enough
...
LL |         acc += cnt2;
   |         --- borrow later used here
...
LL |     }
   |     - `line` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
